<resources>
    <string name="app_name">Om Namah Shivaya</string>
    <string name="know_about_mahashivratri">Know About MahaShivratri</string>
    <string name="history">History</string>
    <string name="message">Message</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_name2">Enter Your Name</string>
    <string name="wishing_you_your_family_and_your_loved_ones_a_happy_and_blessed_mahashivratri_may_lord_shiva_s_grace_be_with_you_always_and_may_this_auspicious_occasion_bring_you_peace_prosperity_and_happiness">Wishing you, your family and your loved ones a happy and blessed Mahashivratri! May Lord Shiva\'s grace be with you always, and may this auspicious occasion bring you peace, prosperity, and happiness.</string>
    <string name="jai_bholenath">Jai Bholenath!🔱</string>
    <string name="say_har_har_mahadev">Say Har Har MahaDev</string>
    <string name="enter">Enter</string>
    <string name="history_of_mahashivratri">History Of MahaShivratri</string>
    <string name="what_is_mahashivratri">What is MahaShivratri?</string>
    <string name="maha_shivratri_is_a_hindu_festival_that_is_celebrated_annually_in_honor_of_lord_shiva_one_of_the_principal_deities_in_hinduism_maha_means_great_and_ratri_means_night_so_the_name_maha_shivratri_translates_to_the_great_night_of_shiva_the_festival_is_usually_observed_on_the_14th_day_of_the_dark_fortnight_in_the_hindu_month_of_phalguna_or_magha_which_typically_falls_in_february_or_march_during_this_festival_devotees_of_lord_shiva_observe_a_fast_and_offer_special_prayers_and_offerings_to_the_deity_they_visit_shiva_temples_perform_abhishekam_pouring_of_milk_and_other_offerings_on_the_shivling_and_engage_in_chanting_of_mantras_and_singing_of_bhajans_devotional_songs_throughout_the_night_maha_shivratri_is_also_believed_to_commemorate_the_marriage_of_lord_shiva_and_goddess_parvati_which_symbolizes_the_union_of_the_masculine_and_feminine_energies_of_the_universe_it_is_considered_one_of_the_most_important_festivals_in_the_hindu_calendar_and_is_celebrated_with_great_devotion_and_enthusiasm_by_devotees_of_lord_shiva_all_over_the_world">Maha Shivratri is a Hindu festival that is celebrated annually in honor of Lord Shiva, one of the principal deities in Hinduism. Mahameans great,and Ratrimeans night,so the name Maha Shivratri translates to the great night of Shiva.The festival is usually observed on the 14th day of the dark fortnight in the Hindu month of Phalguna or Magha, which typically falls in February or March. During this festival, devotees of Lord Shiva observe a fast and offer special prayers and offerings to the deity. They visit Shiva temples, perform Abhishekam (pouring of milk and other offerings on the Shivling), and engage in chanting of mantras and singing of bhajans (devotional songs) throughout the night. Maha Shivratri is also believed to commemorate the marriage of Lord Shiva and Goddess Parvati, which symbolizes the union of the masculine and feminine energies of the universe. It is considered one of the most important festivals in the Hindu calendar and is celebrated with great devotion and enthusiasm by devotees of Lord Shiva all over the world.</string>
    <string name="myth_behind_it_s_origin">Myth Behind it\'s origin</string>
    <string name="according_to_one_popular_myth_on_the_night_of_maha_shivratri_lord_shiva_drank_a_pot_of_poison_that_emerged_during_the_churning_of_the_ocean_to_save_the_world_and_the_day_is_celebrated_in_honor_of_his_sacrifice">According to one popular myth, on the night of Maha Shivratri, Lord Shiva drank a pot of poison that emerged during the churning of the ocean to save the world, and the day is celebrated in honor of his sacrifice.</string>
    <string name="maha_shivratri_is_a_major_hindu_festival_dedicated_to_lord_shiva_that_is_observed_annually_on_the_14th_day_of_the_dark_fortnight_in_the_hindu_month_of_phalguna_or_magha_which_usually_falls_in_february_or_march_devotees_of_lord_shiva_fast_visit_shiva_temples_and_offer_prayers_and_offerings_to_the_deity_throughout_the_night_the_festival_is_celebrated_with_great_devotion_and_enthusiasm_by_hindus_worldwide_and_it_has_religious_and_mythological_significance_in_hinduism">Maha Shivratri is a major Hindu festival dedicated to Lord Shiva that is observed annually on the 14th day of the dark fortnight in the Hindu month of Phalguna or Magha, which usually falls in February or March. Devotees of Lord Shiva fast, visit Shiva temples, and offer prayers and offerings to the deity throughout the night. The festival is celebrated with great devotion and enthusiasm by Hindus worldwide, and it has religious and mythological significance in Hinduism.</string>
    <string name="how_can_you_celebrate">How can You celebrate?</string>
    <string name="to_celebrate_maha_shivratri_devotees_of_lord_shiva_usually_fast_and_visit_shiva_temples_to_offer_prayers_and_offerings_they_also_engage_in_meditation_chanting_of_mantras_and_reading_or_listening_to_stories_about_lord_shiva_to_seek_his_blessings_the_festival_is_a_time_for_spiritual_reflection_and_seeking_blessings_for_a_good_life">To celebrate Maha Shivratri, devotees of Lord Shiva usually fast and visit Shiva temples to offer prayers and offerings. They also engage in meditation, chanting of mantras, and reading or listening to stories about Lord Shiva to seek his blessings. The festival is a time for spiritual reflection and seeking blessings for a good life.</string>
    <string name="thanks_for_reading_nhave_a_good_day">Thanks For Reading!!\nHave a good day!🙏</string>
</resources>